# escrit

./: .byebug_history  .gitignore  .rubocop.yml  CHANGELOG.md  Capfile  Cargo.toml  Gemfile  LICENSE.md  README.md  license.txt
.github/: dependabot.yml
.github/workflows/: rust.yml
app/controllers/: application_controller.rb  artworks_controller.rb  categories_controller.rb  compliments_controller.rb  dictation_controller.rb  dictations_controller.rb  help_controller.rb  languageartworks_controller.rb  languages_controller.rb  read_scaffold_controller.rb  reader_controller.rb  registration_controller.rb  replacements_controller.rb  scaffold_controller.rb  services_controller.rb  settings_controller.rb  statistics_controller.rb  texts_controller.rb  tokens_controller.rb  users_controller.rb  vocabularies_controller.rb  vocabulary_controller.rb  welcome_controller.rb  words_controller.rb
app/helpers/: application_helper.rb  panels_helper.rb  permissions_helper.rb  texts_helper.rb  words_helper.rb
app/models/: ability.rb  application_record.rb  artwork.rb  buddy.rb  category.rb  compliment.rb  entry.rb  language.rb  language_artwork.rb  note.rb  occurrence.rb  replacement.rb  service.rb  text.rb  token.rb  user.rb  word.rb
app/view_models/: statistic_entry.rb
config/: application.rb  database.yml  deploy.rb  nginx.conf  routes.rb  secrets.yml
config/environments/: development.rb  production.rb
db/: schema.rb  seeds.rb
spec/: rails_helper.rb  spec_helper.rb
src/: app.rs  dictionary.rs  main.rs  note_state.rs  text_state.rs  tts.rs  ui.rs
(+450 files in other folders)
