[package]
name = "escrit"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.26", features = ["unstable-rendered-line-info"] }
crossterm = "0.27"
anyhow = "1.0"
itertools = "0.13"
regex = { version = "1.10", features = ["pattern"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
open = "5.1.4"
app_dirs2 = "2.5"
